--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@
 
 a {
   text-decoration: none;
+  color: var(--basic-black);
 }
 
 img {
@@ -83,9 +84,10 @@ img {
 /* Welcome */
 
 .part-welcome {
-  background-image: url("/img/background_photo.jpg");
-  background-position: top center;
+  background-image: url("../img/background_photo.jpg");
   background-repeat: no-repeat;
+  background-size: contain;
+  background-size: cover ;
 }
 
 .city-description h2 {
@@ -106,22 +108,25 @@ img {
 .features {
   font-size: 14px;
   line-height: 21px;
-  filter: drop-shadow(0 4px 4px 0 #000000);
 }
 
-.features h2
 .features h2 {
   font-size: 21px;
   line-height: 21px;
 }
 
-.features-header-one
+.features-header-one{
+  color: var(--basic-white);
+  background-color: var(--lightgray-azure);
+}
+
+
 .features-header-two {
   color: var(--basic-white);
   background-color: var(--lightgray-azure);
 }
 
-.features-list-nonumber {
+.features-list {
   color: var(--Arch-Linux);
   background-color: var(--basic-white);
   list-style: none;
@@ -176,7 +181,7 @@ img {
 .serch-hotel-button:focus {
   background-color: var(--brown);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  opacity: 0,3;
+
 }
 
 /* Main-footer */
@@ -202,15 +207,29 @@ img {
   background-color: var(--lightgray-azure);
 }
 
+.link-htmlacademy:hover {
+  color: var(--gray-azur);
+}
+
+.link-htmlacademy:focus {
+  color: var(--basic-black);
+}
+
 
 /* Catalog */
 
 .checkbox {
-  background-image: url(/img/background_catalog.jpg);
+  background-image: url("../img/background_catalog.jpg");
+  background-repeat: no-repeat;
+  background-position: cover;
   font-size: 16px;
   line-height: 21px;
   color: var(--basic-white);
 }
+
+/* .checkbox-filter:disabled {
+
+}*/
 
 .price caption {
   font-size: 16px;
@@ -243,6 +262,10 @@ img {
   line-height: 26px;
   color: var(--basic-black);
   text-transform: uppercase;
+}
+
+.sort-list {
+  list-style: none;
 }
 
 .sort-button {
@@ -299,6 +322,10 @@ img {
 .result-name-hotel:focus {
   color: var(--basic-black);
   opacity: 0,3;
+}
+
+.search-result-list {
+  list-style: none;
 }
 
 .detailed-button {
@@ -362,3 +389,45 @@ img {
 }
 
 
+/* Modal */
+
+.modal {
+  background-color: var(--basic-white);
+  font-size: 14px;
+  line-height: 26px;
+  color: var(--basic-black);
+}
+
+.arrival-date input {
+  background-color: var(--verizon);
+  border: none;
+  color: var(--basic-black);
+}
+
+.departure-date input {
+  background-color: var(--verizon);
+  border: none;
+  color: var(--basic-black);
+}
+
+.search-button {
+  width: 458px;
+  height: 58px;
+  font: inherit;
+  font-size: 21px;
+  line-height: 26px;
+  text-align: center;
+  vertical-align: middle;
+  color: var(--basic-white);
+  text-transform: uppercase;
+  background-color: var(--lightgray-azure);
+  border: none;
+}
+
+.search-button:hover {
+  background-color: var(--grayish-azure);
+}
+
+.search-button:focus {
+  background-color: var(--gray-azur);
+}
