--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,8 @@ img {
   color: var(--darkgrey-orange1);
 }
 
+
+
 .main-header-logo {
   position: absolute;
   right: 50%;
@@ -410,6 +412,14 @@ img {
   color: var(--basic-black);
 }
 
+.calendar-icon {
+  background-image: url("../img/calendar.png");
+  background-repeat: no-repeat;
+  background-position: 150px center;
+}
+
+
+
 .search-button {
   width: 458px;
   height: 58px;
@@ -431,3 +441,4 @@ img {
 .search-button:focus {
   background-color: var(--gray-azur);
 }
+
